--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "build:audit": "nest build audit && powershell -Command \"Copy-Item 'libs/audit/package.json' 'dist/libs/audit/package.json'\"",
+    "build:audit": "nest build audit && powershell -Command \"Copy-Item 'libs/audit/package.json' 'dist/libs/audit/package.json'\" && powershell -Command \"Copy-Item 'libs/audit/README.md' 'dist/libs/audit/README.md'\"",
+    "build:audit:watch": "nest build audit --watch && powershell -Command \"Copy-Item 'libs/audit/package.json' 'dist/libs/audit/package.json' -Force\"",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
