--- a/libs/audit/package.json
+++ b/libs/audit/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "session-audit",
-  "version": "0.0.3",
+  "name": "nestjs-audit-session",
+  "version": "0.0.1",
   "private": false, 
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
