--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "nest build",
     "build:audit": "nest build audit && powershell -Command \"Copy-Item 'libs/audit/package.json' 'dist/libs/audit/package.json'\" && powershell -Command \"Copy-Item 'libs/audit/README.md' 'dist/libs/audit/README.md'\"",
+    "build:log": "nest build log && powershell -Command \"Copy-Item 'libs/log/package.json' 'dist/libs/log/package.json'\" && powershell -Command \"Copy-Item 'libs/log/README.md' 'dist/libs/log/README.md'\"",
     "build:audit:watch": "nest build audit --watch && powershell -Command \"Copy-Item 'libs/audit/package.json' 'dist/libs/audit/package.json' -Force\"",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
@@ -25,7 +26,9 @@
     "@app/audit": "file:dist/libs/audit",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "ioredis": "^5.8.2",
     "nestjs-cls": "^6.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
@@ -76,7 +79,8 @@
       "<rootDir>/libs/"
     ],
     "moduleNameMapper": {
-      "^@app/audit(|/.*)$": "<rootDir>/libs/audit/src/$1"
+      "^@app/audit(|/.*)$": "<rootDir>/libs/audit/src/$1",
+      "^@app/log(|/.*)$": "<rootDir>/libs/log/src/$1"
     }
   }
 }
