feat(session-sniffer): add session sniffer module with database and elasticsearch integration
- Introduced `nestjs-session-sniffer` library with activity logging capabilities.
- Implemented `DatabaseConfigModule` and `DbConnModule` for database connection management.
- Added `ElasticConfigModule` and `ElasticConnModule` for Elasticsearch integration.
- Created `ActivityLog` entity for storing user activity logs in the database.
- Developed `InsertLogSniffer` service to handle logging events and save logs to both MariaDB and Elasticsearch.
- Updated `SessionSnifferService` to intercept requests and emit logging events.
- Configured application to use the new session sniffer module and adjusted environment settings.
- Added necessary dependencies in `package.json` and updated module mappings in `tsconfig.json`.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,12 @@
       ],
       "@app/log/*": [
         "libs/log/src/*"
+      ],
+      "@app/session-sniffer": [
+        "libs/session-sniffer/src"
+      ],
+      "@app/session-sniffer/*": [
+        "libs/session-sniffer/src/*"
       ]
     }
   }
