--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "nest build",
     "build:audit": "nest build audit && powershell -Command \"Copy-Item 'libs/audit/package.json' 'dist/libs/audit/package.json'\" && powershell -Command \"Copy-Item 'libs/audit/README.md' 'dist/libs/audit/README.md'\"",
     "build:log": "nest build log && powershell -Command \"Copy-Item 'libs/log/package.json' 'dist/libs/log/package.json'\" && powershell -Command \"Copy-Item 'libs/log/README.md' 'dist/libs/log/README.md'\"",
+    "build:session-sniffer": "nest build session-sniffer && powershell -Command \"New-Item -ItemType Directory -Force -Path 'dist/libs/session-sniffer'; Copy-Item 'libs/session-sniffer/package.json' 'dist/libs/session-sniffer/package.json'\"",
     "build:audit:watch": "nest build audit --watch && powershell -Command \"Copy-Item 'libs/audit/package.json' 'dist/libs/audit/package.json' -Force\"",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
@@ -25,11 +26,14 @@
   "dependencies": {
     "@app/audit": "file:dist/libs/audit",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/elasticsearch": "^11.1.0",
     "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "ioredis": "^5.8.2",
     "nestjs-cls": "^6.0.1",
+    "nestjs-session-sniffer": "^0.0.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -80,7 +84,8 @@
     ],
     "moduleNameMapper": {
       "^@app/audit(|/.*)$": "<rootDir>/libs/audit/src/$1",
-      "^@app/log(|/.*)$": "<rootDir>/libs/log/src/$1"
+      "^@app/log(|/.*)$": "<rootDir>/libs/log/src/$1",
+      "^@app/session-sniffer(|/.*)$": "<rootDir>/libs/session-sniffer/src/$1"
     }
   }
 }
